Fixed navbar not closing when item clicked on mobile devices and other small responsivity changes

--- a/css/style.css
+++ b/css/style.css
@@ -761,23 +761,28 @@ footer .copyright::before {
     border: none;
   }
   .preheading {
-    font-size: 0.65rem;
+    font-size: 0.7rem;
     letter-spacing: 0.1rem;
   }
   .carousel-caption h1 {
     font-size: 3.5rem;
     letter-spacing: 0.35rem;
+    margin: 0.7rem auto;
   }
   .carousel-caption p {
-    font-size: 1rem;
+    font-size: 0.9rem;
     line-height: 1.4;
   }
+  .carousel-caption a {
+    padding: 0.7rem 0.5rem;
+    margin-top: 1rem;
+  }
   .btn {
-    font-size: 0.8rem;
-    padding: 0.8rem 1rem;
+    font-size: 0.75rem;
+    padding: 0.6rem 0.5rem;
   }
   .btn-container .btn {
-    padding: 0.7rem 1rem;
+    padding: 0.6rem 0.5rem;
   }
   .btn-container {
     display: flex;
@@ -794,16 +799,11 @@ footer .copyright::before {
   }
   #back-to-top-btn {
     font-size: 1.2rem;
-    width: 2.2rem;
-    height: 2.2rem;
-    bottom: 8%;
-    right: 3%;
   }
-}
-
-@media only screen and (max-width: 450px) {
-  .btn-container .btn {
-    padding: 0.7rem 0.5rem;
+  .alert .list-group-item {
+    font-size: 0.8rem;
+    line-height: 1.2;
+    padding: 0.5rem 0;
   }
 }
 
@@ -825,9 +825,6 @@ footer .copyright::before {
   }
   .carousel-caption a {
     margin-top: 1rem;
-  }
-  .carousel-caption h1 {
-    margin: 1rem auto;
   }
   .carousel-caption p {
     font-size: 0.85rem;
